--- a/css/pwostart.css
+++ b/css/pwostart.css
@@ -20,7 +20,13 @@ body {
 background-color: black;
 }
 
+
+
 h2 {
-    color: white;
-    text-align: center;
+color: white;
+text-align: center;
+}
+
+a {
+text-decoration: none;
 }
